<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.ciphersink.exercise2.ActivityTwo">

    <TextView android:text="@string/default_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameDisplay" />

    <TextView android:text="@string/default_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numberDisplay"
        android:layout_below="@+id/nameDisplay"/>

    <TextView android:text="@string/default_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typeDisplay"
        android:layout_below="@+id/numberDisplay"/>

    <TextView android:text="@string/default_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailDisplay"
        android:layout_below="@+id/typeDisplay"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_text"
        android:id="@+id/agreeCheckbox"
        android:layout_below="@+id/emailDisplay" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        android:id="@+id/subButtonFinal"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp" />


</RelativeLayout>
